--- a/css/styles.css
+++ b/css/styles.css
@@ -12,6 +12,41 @@ body {
     background-color: #ffffff;
 }
 
+
+h1,
+h2,
+h3,
+h4,
+p,
+ul {
+    margin: 0;
+    padding: 0;
+}
+
+img {
+    display: block;
+}
+
+.section {
+    padding-top: 120px;
+    padding-bottom: 120px;
+}
+
+.container {
+    width: 1158px;
+    margin-left: auto;
+    margin-right: auto;
+    padding-left: 15px;
+    padding-right: 15px;
+}
+
+.flex-header {
+    display: flex;
+    justify-content: space-between;
+    padding-top: 24px;
+    padding-bottom: 24px;
+}
+
 /* Navbar */
 
 .link {
@@ -22,7 +57,17 @@ body {
     list-style: none;
 }
 
+.nav-menu {
+    display: flex;
+}
+
+.nav-list {
+    display: flex;
+}
+
+
 .logo {
+    margin-right: 76px;
     font-family: 'Raleway', sans-serif;
     font-size: 18px;
     font-weight: 800;
@@ -41,7 +86,9 @@ body {
     color: var(--light-color);
 }
 
-
+.nav-bar-item:not(:last-child) {
+    margin-right: 40px;
+}
 
 .nav-bar-link {
     font-weight: 500;
@@ -62,6 +109,15 @@ body {
     font-style: normal;
 }
 
+.address-list {
+    display: flex;
+}
+
+.address-item:not(:last-child) {
+    margin-right: 40px;
+
+}
+
 .address-link {
 
     font-weight: 400;
@@ -79,20 +135,28 @@ body {
 /* Hero section */
 .hero {
     background-color: var(--dark-color);
+    text-align: center;
+    padding-top: 188px;
+    padding-bottom: 188px;
 }
 
 .hero-title {
+    width: 496px;
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 48px;
     font-weight: 700;
     font-size: 56px;
     line-height: 1.07;
     letter-spacing: 0.02em;
     color: #ffffff;
-    text-align: center;
 }
 
 .hero-button {
+    padding: 16px 32px;
+    border: 1px solid transparent;
+    border-radius: 4px;
     font-family: 'Roboto', sans-serif;
-    ;
     font-weight: 500;
     font-size: 16px;
     line-height: 1.5;
@@ -109,7 +173,20 @@ body {
 
 /* Features section */
 
+.section.features {
+    padding-bottom: 0;
+}
+
+.features-list {
+    display: flex;
+}
+
+.features-item:not(:last-child) {
+    margin-right: 24px;
+}
+
 .features-title {
+    margin-bottom: 8px;
     font-weight: 500;
     font-size: 20px;
     line-height: 1.2;
@@ -126,16 +203,34 @@ body {
 
 /* Our work and Our team section*/
 
+
+
+.works-list {
+    display: flex;
+    justify-content: space-between;
+}
+
+.works-item:not(:last-child),
+.team-item:not(:last-child) {
+    margin-right: 24px;
+}
+
 .team-section {
     background-color: var(--light-color);
 }
 
 .team-list {
+    display: flex;
+    justify-content: space-between;
+}
+
+.team-item {
     background-color: #ffffff;
 }
 
 .work-title,
 .team-title {
+    margin-bottom: 72px;
     text-align: center;
     font-weight: 700;
     font-size: 36px;
@@ -145,8 +240,19 @@ body {
     text-transform: capitalize;
 }
 
+.team-img {
+    margin-bottom: 32px;
+}
+
+.team-content {
+    margin-bottom: 32px;
+    text-align: center;
+
+}
+
 .member-name,
 .portfolio-title {
+    margin-bottom: 8px;
     font-weight: 500;
     font-size: 20px;
     line-height: 1.2;
@@ -165,10 +271,24 @@ body {
 /* Footer */
 
 
-footer {
+.footer {
+    padding-top: 100px;
+    padding-bottom: 100px;
     background-color: var(--dark-color);
     color: var(--light-color);
 }
+
+.footer-content {
+    width: 264px;
+}
+
+.footer-text {
+    margin-top: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    color: var(--light-color);
+}
+
 
 /* Portfolio page */
 
